syntax = "proto3";

package main;
option go_package = "./proto";

message DownloadFileRequest {
  string fileName = 1;
}

message DownloadDirRequest {
  string dirName = 1;
}

message FileChunk {
  bytes chunk_data = 1;
}

message DirChunk {
  optional string dir_name = 1;
  optional string file_name = 2;
  optional bytes chunk_data = 3;
}

service fileService {
  rpc DownloadFile(DownloadFileRequest) returns (stream FileChunk);
  rpc DownloadDir(DownloadDirRequest) returns (stream DirChunk);
}